# TravisTest

./: .travis.yml  CMakeLists.txt  README.md
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
examples/: example1.cpp
includes/: arithmetics.hpp
sources/: arithmetics.cpp
tests/: test1.cpp
